<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="@dimen/dialog_height"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/dialog_title"
        android:layout_marginBottom="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@android:color/darker_gray"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraints"
        android:layout_weight="0.8"
        android:gravity="center"
        android:text="@string/dialog_subtitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@android:color/darker_gray"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/exit_textView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraints"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="@string/dialog_exit"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        style="@style/ClickableView"/>

</LinearLayout>