<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:minHeight="@dimen/min_height_item">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/list_item_icon"
        android:layout_width="@dimen/list_item_icon_size"
        android:layout_height="@dimen/list_item_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:padding="@dimen/padding_16"
        android:contentDescription="@string/item_img_content_description" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/list_item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:text="@string/item_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_item_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/list_item_subTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:text="@string/random_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintBottom_toBottomOf="@+id/list_item_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/list_item_icon"
        app:layout_constraintTop_toBottomOf="@+id/list_item_title" />
</androidx.constraintlayout.widget.ConstraintLayout>